--- a/polls/templates/polls/details.html
+++ b/polls/templates/polls/details.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+
+{% block body %}
     <h1>{{ question.question_text }}</h1>
     {% if error_message %}<p><strong>{{% error_message %}}</strong></p>{% endif %}
 <form action="{ url 'polls:vote' question.id %}" method="post">
@@ -17,6 +13,4 @@
 <input type="submit" value="Vote">
 </form>
 
-
-</body>
-</html>
+{% endblock %}
