--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block body %}
     {%if latest_question_list%}
     <ul>
         {%for question in latest_question_list%}
@@ -15,7 +10,6 @@
     {% else %}
        <p> No polls available</p>
     {% endif %}  
-</body>
-</html>
+    {% endblock %}
 
 
