--- a/polls/templates/polls/details.html
+++ b/polls/templates/polls/details.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 
-
-{% block body %}
+{% block mycustomstuff %} 
     <h1>{{ question.question_text }}</h1>
     {% if error_message %}<p><strong>{{% error_message %}}</strong></p>{% endif %}
 <form action="{ url 'polls:vote' question.id %}" method="post">
@@ -12,5 +11,5 @@
 {% endfor %}
 <input type="submit" value="Vote">
 </form>
-
 {% endblock %}
+
