--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block body %}
+{% block mycustomstuff %} 
     {%if latest_question_list%}
     <ul>
         {%for question in latest_question_list%}
@@ -10,6 +10,7 @@
     {% else %}
        <p> No polls available</p>
     {% endif %}  
+    
     {% endblock %}
 
 
