--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,3 @@
-
-{% block body %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    {% block mycustomstuff %}{% endblock %}
 </body>
 </html>
-{% endblock %}
